--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-nested-router",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kingno21.github.io/react-nested-router",
   "dependencies": {
     "@emotion/core": "^10.0.9",
     "@emotion/styled": "^10.0.9",
@@ -14,8 +15,10 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -28,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "react-app-rewired": "^2.1.1"
   }
 }
